--- a/Domain.Services/Domain.Services.csproj
+++ b/Domain.Services/Domain.Services.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Infra.OrganziationService\Infra.OrganziationService.csproj" />
+  </ItemGroup>
+
 </Project>
